# WEB_Python17M7

./: CLI_seed.py  my_select.py  pyproject.toml  seed.py
conf/: db.py  models.py
migrations/versions/: cef95446c06c_init.py
