[tool.poetry]
name = "web-python17m7"
version = "0.1.0"
description = ""
authors = ["hedgyv <hedgy85@hotmail.com>"]
license = "web_dz7_db"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"
faker = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
